# soda-java

./: .gitignore  CMakeLists.txt  README.md  pom.xml
src/main/cpp/: CMakeLists.txt  Changeset.cpp  CoverageMatrix.cpp  ResultsMatrix.cpp  handle.cpp  handle.h  hu_sed_soda_data_Changeset.h  hu_sed_soda_data_CoverageMatrix.h  hu_sed_soda_data_ResultsMatrix.h
src/main/cpp/cmake/: SoDA.cmake
src/main/java/hu/sed/soda/data/: Changeset.java  CoverageMatrix.java  ResultsMatrix.java
